--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+
+html,
+body,
+#root {
+  width: 425px;
+  height: 900px;
+  margin: 0 auto;
+  padding: 0;
+  background-color: #f9f9f9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  font-family: sans-serif;
+}
